Feat: Adding genus_name to filter_not options
